@startuml integration-events
title <size:16><b>Integration Events</b></size>\n<color:#555>Межсервисные события (MassTransit / RabbitMQ)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 12
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 50
skinparam ranksep 60

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #EBF5FB
    BorderColor #2980B9
    BorderThickness 1.2
    ArrowColor #2980B9
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam package {
    BackgroundColor #FAFAFA
    BorderColor #90A4AE
    FontName "Segoe UI", Arial, sans-serif
    FontSize 13
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #D6EAF8

' ─── Shared Contracts ────────────────────────────────────────────────────────

package "LocMp.Contracts\n(общая библиотека событий)" #F5F5F5 {

    package "Identity Events" #EDE7F6 {
        class UserRegisteredEvent {
            + UserId : Guid
            + Email : string
            + DisplayName : string
            + OccurredAt : DateTimeOffset
        }
        class UserBlockedEvent {
            + UserId : Guid
            + BlockedUntil : DateTimeOffset
            + OccurredAt : DateTimeOffset
        }
        class UserUnblockedEvent {
            + UserId : Guid
            + OccurredAt : DateTimeOffset
        }
        class UserProfileUpdatedEvent {
            + UserId : Guid
            + DisplayName : string
            + AvatarUrl : string?
            + OccurredAt : DateTimeOffset
        }
        class UserBecameSellerEvent {
            + UserId : Guid
            + DisplayName : string
            + OccurredAt : DateTimeOffset
        }
        class UserLostSellerStatusEvent {
            + UserId : Guid
            + OccurredAt : DateTimeOffset
        }
        class UserBecameCourierEvent {
            + UserId : Guid
            + DisplayName : string
            + OccurredAt : DateTimeOffset
        }
        class UserLostCourierStatusEvent {
            + UserId : Guid
            + OccurredAt : DateTimeOffset
        }
    }

    package "Catalog Events" #E9F7EF {
        class StockReservedEvent {
            + ProductId : Guid
            + OrderId : Guid
            + ReservedQuantity : int
            + OccurredAt : DateTimeOffset
        }
        class StockReservationFailedEvent {
            + ProductId : Guid
            + OrderId : Guid
            + Reason : string
            + OccurredAt : DateTimeOffset
        }
        class StockReleasedEvent {
            + ProductId : Guid
            + OrderId : Guid
            + ReleasedQuantity : int
            + OccurredAt : DateTimeOffset
        }
        class StockDepletedEvent {
            + ProductId : Guid
            + SellerId : Guid
            + ProductName : string
            + OccurredAt : DateTimeOffset
        }
        class ProductViewedEvent {
            + ProductId : Guid
            + SellerId : Guid
            + ViewerId : Guid?
            + OccurredAt : DateTimeOffset
        }
        class ProductCreatedEvent {
            + ProductId : Guid
            + SellerId : Guid
            + ProductName : string
            + ShopId : Guid?
            + ShopName : string?
            + OccurredAt : DateTimeOffset
        }
        class FavoriteChangedEvent {
            + ProductId : Guid
            + SellerId : Guid
            + UserId : Guid
            + IsAdded : bool
            + OccurredAt : DateTimeOffset
        }
        class ProductRestockedEvent {
            + ProductId : Guid
            + SellerId : Guid
            + ProductName : string
            + ShopId : Guid
            + NewStock : int
            + FavoritedByUserIds : IReadOnlyList<Guid>
            + OccurredAt : DateTimeOffset
        }
    }

    package "Order Events" #EDE7F6 {
        class OrderPlacedEvent {
            + OrderId : Guid
            + BuyerId : Guid
            + SellerId : Guid
            + TotalAmount : decimal
            + OccurredAt : DateTimeOffset
        }
        class OrderStatusChangedEvent {
            + OrderId : Guid
            + BuyerId : Guid
            + SellerId : Guid
            + FromStatus : string
            + ToStatus : string
            + OccurredAt : DateTimeOffset
        }
        class OrderedProductItem {
            + ProductId : Guid
            + ProductName : string
            + Quantity : int
            + Subtotal : decimal
            + ShopId : Guid?
            + ShopName : string?
        }
        class OrderCompletedEvent {
            + OrderId : Guid
            + BuyerId : Guid
            + SellerId : Guid
            + SellerName : string
            + CourierId : Guid?
            + Products : IReadOnlyList<OrderedProductItem>
            + TotalAmount : decimal
            + IsSellerDelivery : bool
            + OccurredAt : DateTimeOffset
        }
        class StockReserveRequestEvent {
            + ProductId : Guid
            + OrderId : Guid
            + Quantity : int
            + OccurredAt : DateTimeOffset
        }
        class CourierApplicationSubmittedEvent {
            + ApplicationId : Guid
            + OrderId : Guid
            + CourierId : Guid
            + CourierName : string
            + OccurredAt : DateTimeOffset
        }
        class CourierApplicationApprovedEvent {
            + ApplicationId : Guid
            + OrderId : Guid
            + CourierId : Guid
            + SellerId : Guid
            + OccurredAt : DateTimeOffset
        }
        class CourierApplicationRejectedEvent {
            + ApplicationId : Guid
            + OrderId : Guid
            + CourierId : Guid
            + OccurredAt : DateTimeOffset
        }
        class CourierAssignmentExpiredEvent {
            + OrderId : Guid
            + CourierId : Guid
            + SellerId : Guid
            + OccurredAt : DateTimeOffset
        }
        class DisputeOpenedEvent {
            + DisputeId : Guid
            + OrderId : Guid
            + BuyerId : Guid
            + SellerId : Guid
            + InitiatorId : Guid
            + DisputeType : DisputeType
            + OccurredAt : DateTimeOffset
        }
        class DisputeResolvedEvent {
            + DisputeId : Guid
            + OrderId : Guid
            + DisputeType : DisputeType
            + Outcome : DisputeOutcome
            + BuyerId : Guid
            + SellerId : Guid
            + CourierId : Guid?
            + ProductIds : IReadOnlyList<Guid>
            + ResolutionMinutes : int
            + OccurredAt : DateTimeOffset
        }
        enum DisputeType {
            NotDelivered = 1
            WrongItem    = 2
            DefectiveItem = 3
            CourierIssue = 4
            Other        = 5
        }
        enum DisputeOutcome {
            BuyerFavored  = 1
            SellerFavored = 2
        }
        OrderCompletedEvent ..> OrderedProductItem
        DisputeOpenedEvent  ..> DisputeType
        DisputeResolvedEvent ..> DisputeType
        DisputeResolvedEvent ..> DisputeOutcome
    }

    package "Chat Events" #E8F5E9 {
        class ChatMessageSentEvent {
            + ChatId : Guid
            + MessageId : Guid
            + SenderId : Guid
            + SenderName : string
            + RecipientIds : Guid[]
            + ChatType : string
            + SubjectName : string
            + OccurredAt : DateTimeOffset
        }
    }

    package "Review Events" #FDEDEC {
        class RatingAggregateUpdatedEvent {
            + SubjectId : Guid
            + SubjectType : string
            + NewAverage : decimal
            + ReviewCount : int
            + OccurredAt : DateTimeOffset
        }
        class ReviewCreatedEvent {
            + ReviewId : Guid
            + SubjectId : Guid
            + SubjectType : string
            + ReviewerId : Guid
            + SellerId : Guid
            + Rating : int
            + SubjectName : string? <<snapshot>>
            + OccurredAt : DateTimeOffset
        }
    }
}

' ─── Notes ───────────────────────────────────────────────────────────────────

note as PublisherNote
  <b>Кто публикует:</b>
  IdentityService  → UserRegisteredEvent
                     UserBlockedEvent
                     UserUnblockedEvent
                     UserProfileUpdatedEvent
                     UserBecameSellerEvent
                     UserLostSellerStatusEvent
                     UserBecameCourierEvent
                     UserLostCourierStatusEvent
  ─────────────────────────────────────────
  CatalogService   → StockReservedEvent
                     StockReservationFailedEvent
                     StockReleasedEvent
                     StockDepletedEvent
                     ProductViewedEvent
                     ProductCreatedEvent
                     ProductRestockedEvent
                     FavoriteChangedEvent
  ─────────────────────────────────────────
  OrderService     → OrderPlacedEvent
                     OrderStatusChangedEvent
                     OrderCompletedEvent
                     DisputeOpenedEvent
                     DisputeResolvedEvent
                     CourierApplicationSubmittedEvent
                     CourierApplicationApprovedEvent
                     CourierApplicationRejectedEvent
                     CourierAssignmentExpiredEvent
  ─────────────────────────────────────────
  ReviewService    → RatingAggregateUpdatedEvent
                     ReviewCreatedEvent
  ─────────────────────────────────────────
  ChatService      → ChatMessageSentEvent
end note

note as ConsumerNote
  <b>Кто потребляет:</b>
  CatalogService:
    • RatingAggregateUpdatedEvent  → обновляет SellerReadModel
    • UserProfileUpdatedEvent      → обновляет SellerReadModel
    • UserBecameSellerEvent        → создаёт SellerReadModel
    • UserLostSellerStatusEvent    → деактивирует все магазины продавца
  ─────────────────────────────────────────
  OrderService:
    • UserBlockedEvent            → отменяет Pending заказы
    (резервирование стока — синхронный HTTP, не событие)
  ─────────────────────────────────────────
  ReviewService:
    • OrderCompletedEvent  → разблокирует отзыв для покупателя
    • DisputeResolvedEvent → создаёт отзывы по итогам диспута
  ─────────────────────────────────────────
  AnalyticsService:
    • OrderPlacedEvent            → PlatformDailySummary, GeographicActivity
    • OrderStatusChangedEvent     → SellerSalesSummary (cancelled/disputed)
    • OrderCompletedEvent         → SellerSalesSummary, TopProduct, SellerLeaderboard
    • StockDepletedEvent          → StockAlert
    • RatingAggregateUpdatedEvent → SellerRatingHistory
    • UserRegisteredEvent         → PlatformDailySummary.NewRegistrations
    • UserBlockedEvent            → PlatformDailySummary.BlockedUsers
    • ProductViewedEvent          → ProductViewCounter, TopProduct.ViewCount
    • FavoriteChangedEvent        → TopProduct.FavoriteCount
    • DisputeOpenedEvent          → DisputeSummary.OpenedCount
    • DisputeResolvedEvent        → DisputeSummary (outcome + время решения)
    • ProductCreatedEvent         → PlatformDailySummary.NewProducts
    • ReviewCreatedEvent          → PlatformDailySummary.NewReviews 
  ─────────────────────────────────────────
  NotificationService:
    • UserRegisteredEvent               → создаёт UserNotificationPreferences
    • UserBecameSellerEvent             → приветственное уведомление новому продавцу
    • UserBlockedEvent                  → уведомление пользователю о блокировке
    • UserUnblockedEvent                → уведомление пользователю о разблокировке
    • OrderPlacedEvent                  → уведомление продавцу
    • OrderStatusChangedEvent           → уведомление покупателю/продавцу
    • OrderCompletedEvent               → предложение написать отзыв покупателю
    • StockDepletedEvent                → уведомление продавцу
    • ProductRestockedEvent             → уведомление пользователям из избранного
    • ReviewCreatedEvent                → уведомление продавцу о новом отзыве
    • DisputeOpenedEvent                → mandatory email + in-app покупателю и продавцу
    • DisputeResolvedEvent              → mandatory email + in-app о решении
    • ChatMessageSentEvent              → in-app уведомление получателю (NewMessage)
    • CourierApplicationSubmittedEvent  → уведомление продавцу о новой заявке
    • CourierApplicationApprovedEvent   → уведомление курьеру об одобрении
    • CourierApplicationRejectedEvent   → уведомление курьеру об отклонении
    • CourierAssignmentExpiredEvent     → уведомление продавцу о таймауте курьера
  ─────────────────────────────────────────
  ChatService:
    • OrderPlacedEvent   → создаёт чат-комнату (BuyerId + SellerId)
end note

@enduml
